Assets/css/style.css
:root{
    --grey: rgb(59, 56, 75);
    --darkGrey: rgb(41, 40, 51);
    --blue: rgb(33, 126, 212);
    --darkBlue: rgb(18, 105, 187);
    --teal: teal;
    --darkTeal: rgb(4, 97, 97);
}

body{
    width: 100%;
    height: 100%;
    background-color: var(--grey);
    overflow-x: hidden;
}

a{
    color: var(--blue);
}

a:hover, a:focus {
    color: var(--darkBlue);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 300;
    color: white;
}

p{
    color: white;
    font-weight: 100;
}

#mainNavbar{
    background-color: var(--darkGrey);
    border-color: white;
    font-weight: 400;
    font-size: 24px;
    color: white;
}

#mainNavbar .navbarTitle{
    color:white;
    font-size: 32px;
    font-weight: 500;
    
}

.navbarTitle:hover{
    filter:drop-shadow(2px 2px 2px rgb(15, 17, 26));
}

.navbar {
    justify-content: start;
}

.navbar-toggler {
    margin-left: auto;
}

.navbar-text{
    color:var(--blue) !important;
    text-transform: uppercase;
    margin-left: 20px;
    text-decoration: underline;
}

#mainNavbar a:hover{
    text-decoration: none;
    color:white;
}

 #mainNavbar .navbar-nav > li > a {
    font-size: 18px;
    text-transform: uppercase;
}
  
#mainNavbar .navbar-nav > li > a,
#mainNavbar .navbar-nav > li > a:focus {
    color: var(--teal);
}
  
#mainNavbar .navbar-nav > li > a:hover,
#mainNavbar .navbar-nav > li > a:focus:hover {
    color: var(--darkTeal);
}

.pageTop{
    background-image: url(../images/placeholder-1.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    height:calc(50vh + 10px);
    display: flex;
    flex-direction: column;
    align-items:center;
    justify-content: flex-end;
    color:white;
}

.jumbotronHeader{
    display: flex;
    align-items: center;
    background-color: var(--blue);
}

.jumbotronHeader h1{
  font-size: 32px;
  color: white;
  padding: 20px;
}

#photo{
    width:150px;
    height: 150px;
    border-radius: 100px;
    padding: 20px;
}

.lead{
    padding:20px;
    text-align: justify;
}

.container-fluid{
    padding: 20px;
}

.sectionHeading {
    text-align: center;
}

.cardPadding{
    padding: 10px;
}

.cardContainer {
    text-align: center;
    padding: 10px;
}

.card{
    background-color: rgba(33, 126, 212, 0.2);
    border: 0px;
    border-radius: 0;
}

.card-body{
    padding:10px;
}

.card-body p{
    color: var(--teal);
    font-weight: 400;
}

.card-img-top{
    border-radius: 0;
    width:100%;
    height:20vh;
    object-fit:cover;
}

.btn-primary{
    background-color: var(--blue);
}

.btn:hover{
    box-shadow: 0 5px 10px rgba(10, 8, 124, 0.5)
}

#about-me-container{
    display: flex;
}

#about-me-container p{
    padding: 16px;
    text-align: justify;
}

#contact{
    padding: 16px;
}

#contact-icons{
    justify-content: center;
}

#contact-icon-img{
    height:60px;
    width: 60px;
    padding: 16px;
}

#contact-icon-img:hover{
  filter:drop-shadow(2px 2px 2px rgb(17, 17, 17));
}

